crates/usfm_parser/tests/snapshots/recovery__a_plussed_style_still_nests_inside_xo.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a\\x - \\xo 1.1 \\+xt Gen 1.1\\+xt*\\x* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..57
  VerseStart 1@16..20
  Text "a"@21..22
  Note x caller=-@22..55
    Char xo@27..55
      Text "1.1 "@31..35
      Char xt@35..52
        Text "Gen 1.1"@40..47
  Text " b"@55..57
  VerseEnd 1
ChapterEnd 1
