crates/usfm_parser/tests/snapshots/recovery__alternate_verse_not_closed.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\va 3 text"
snapshot_kind: text
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..31
  VerseStart 1@16..27 alt=3
  Text "text"@27..31
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[alternate-verse-not-closed] @21..24: `\va` is not closed by `\va*`
