crates/usfm_parser/tests/snapshots/recovery__autofix_b_without_p.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN genesis Some desc\n\\c 1\n\\p\n\\v 1 test verse\n\\s some poem\n\\q1\nfirst line\n\\b\n\\q1\n\\v 2 more lines\n\\b\nremaining verses\n\\v 3 text follows\n\\c 2\n\\p\n\\v 1 test verse\n\\s some poem\n\\q1\nfirst line\n\\b\n\\q1\n\\v 2 more lines\n\\b\n\\v 3 verse follows"
---
Book GEN "genesis Some desc" @0..25
ChapterStart 1@26..30
Para p@31..50
  VerseStart 1@34..38
  Text "test verse"@39..50
Para s@50..63
  Text "some poem"@53..63
Para q1@63..78
  Text "first line"@67..78
  VerseEnd 1
Para b@78..81
Para q1@81..101
  VerseStart 2@85..89
  Text "more lines"@90..101
Para b@101..139
  Text "remaining verses"@104..121
  VerseEnd 2
  Text " "
  VerseStart 3@121..125
  Text "text follows"@126..139
  VerseEnd 3
ChapterEnd 1
ChapterStart 2@139..143
Para p@144..163
  VerseStart 1@147..151
  Text "test verse"@152..163
Para s@163..176
  Text "some poem"@166..176
Para q1@176..191
  Text "first line"@180..191
  VerseEnd 1
Para b@191..194
Para q1@194..214
  VerseStart 2@198..202
  Text "more lines"@203..214
  VerseEnd 2
Para b@214..235
  VerseStart 3@217..221
  Text "verse follows"@222..235
  VerseEnd 3
ChapterEnd 2
