crates/usfm_parser/tests/snapshots/recovery__autofix_empty_marker.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN genesis Some desc\n\\c 1\n\\p\n\\v 1 test verse\n\\s3 test\n\\sp\n\\p\n\\v 2 more verse \n\\c 2\n\\p\n\\v 1 text and \n\\v 2 more text"
---
Book GEN "genesis Some desc" @0..25
ChapterStart 1@26..30
Para p@31..50
  VerseStart 1@34..38
  Text "test verse"@39..50
  VerseEnd 1
Para s3@50..59
  Text "test"@54..59
Para sp@59..63
Para p@63..83
  VerseStart 2@66..70
  Text "more verse"@71..83
  VerseEnd 2
ChapterEnd 1
ChapterStart 2@83..87
Para p@88..120
  VerseStart 1@91..95
  Text "text and"@96..106
  VerseEnd 1
  Text " "
  VerseStart 2@106..110
  Text "more text"@111..120
  VerseEnd 2
ChapterEnd 2
