crates/usfm_parser/tests/snapshots/recovery__autofix_s5_without_p.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN genesis Some desc\n\\c 1\n\\p\n\\v 1 test verse\n\\s5\nsome more text\n\\v 2 more verse\n\\c 2\n\\p\n\\v 1 next chapter\n"
---
Book GEN "genesis Some desc" @0..25
ChapterStart 1@26..30
Para p@31..50
  VerseStart 1@34..38
  Text "test verse"@39..50
  VerseEnd 1
Para s5@50..85
  Text "some more text "@54..69
  VerseStart 2@69..73
  Text "more verse"@74..85
  VerseEnd 2
ChapterEnd 1
ChapterStart 2@85..89
Para p@90..111
  VerseStart 1@93..97
  Text "next chapter"@98..111
  VerseEnd 1
ChapterEnd 2
