crates/usfm_parser/tests/snapshots/recovery__block_milestone_after_a_sidebar.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\esb\\c\\sh\\*"
---
Sidebar esb@0..4
Para p@6..11
  Milestone sh@6..11
--- diagnostics
error[sidebar-not-closed] @0..4: `\esb` is not closed by `\esbe` before `\c`
error[missing-chapter-number] @4..6: `\c` must be followed by a chapter number
warning[unknown-milestone] @6..9: milestone `\sh` is not in the stylesheet
warning[content-outside-paragraph] @6..11: content after `\esbe` is outside a paragraph; an implicit `\p` was opened
