crates/usfm_parser/tests/snapshots/recovery__block_milestone_after_a_table.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\p x\n\\tr \\tc1 y\n\\c\n\\zaln-s\\*"
---
Para p@0..5
  Text "x"@3..5
Table@5..16
  Row@5..16
    Cell header=false align=start column=1 colspan=1@9..16
      Text "y"@14..16
Para p@19..28
  Milestone zaln-s@19..28
--- diagnostics
error[missing-chapter-number] @16..18: `\c` must be followed by a chapter number
info[unknown-custom-milestone] @19..26: custom milestone `\zaln-s` is not in the stylesheet
warning[content-outside-paragraph] @19..28: content after `\tr` is outside a paragraph; an implicit `\p` was opened
