crates/usfm_parser/tests/snapshots/recovery__block_milestone_at_the_head_of_a_periph.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\periph\\id\\e\\*"
---
Periph periph@0..14
  Para p@10..14
    Milestone e@10..14
--- diagnostics
error[missing-book-code] @7..10: `\id` must be followed by a book code
warning[unknown-milestone] @10..12: milestone `\e` is not in the stylesheet
warning[content-outside-paragraph] @10..14: content after `\periph` is outside a paragraph; an implicit `\p` was opened
